After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740595 - group: Fix a memory leak
group: Fix a memory leak
Status: RESOLVED FIXED
Product: gom
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Gom Maintainers
Gom Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-23 19:51 UTC by Mathieu Bridon
Modified: 2014-11-23 22:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
group: Fix a memory leak (687 bytes, patch)
2014-11-23 19:51 UTC, Mathieu Bridon
committed Details | Review

Description Mathieu Bridon 2014-11-23 19:51:37 UTC
.
Comment 1 Mathieu Bridon 2014-11-23 19:51:41 UTC
Created attachment 291324 [details] [review]
group: Fix a memory leak
Comment 2 Christian Hergert 2014-11-23 22:27:39 UTC
Review of attachment 291324 [details] [review]:

LGTM
Comment 3 Christian Hergert 2014-11-23 22:33:24 UTC
Comment on attachment 291324 [details] [review]
group: Fix a memory leak

Pushed to master. Although this does make me wonder if we should use GSlice for this allocation (since it's just two pointers). Malloc would have at least one pointer of overhead (for allocation size) that gslice would not by using magazines.